@@ -700,6 +700,10 @@ public class AndroidGraphics extends AbstractGraphics implements Renderer {
 	}
 
 	@Override
+	public void setForegroundFPS (int fps) {
+	}
+
+	@Override
 	public boolean supportsExtension (String extension) {
 		if (extensions == null) extensions = Gdx.gl.glGetString(GL10.GL_EXTENSIONS);
 		return extensions.contains(extension);
